bug fixes and admin features modified
