# cmd/api/docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "after user login user will seen this page with user informations",
+                "tags": [
+                    "Home"
+                ],
+                "summary": "api for user home page",
+                "operationId": "User Home",
+                "responses": {
+                    "200": {
+                        "description": "Welcome to home !"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "security": [
@@ -35,7 +55,72 @@
                         }
                     },
                     "400": {
-                        "description": "invalid entry",
+                        "description": "Missing or invalid entry",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "failed to send OTP",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/logout": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "user can logout",
+                "tags": [
+                    "User Logout"
+                ],
+                "summary": "api for user to logout",
+                "operationId": "UserLogout",
+                "responses": {
+                    "200": {
+                        "description": "Log out successful"
+                    }
+                }
+            }
+        },
+        "/otp-verify": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "User OTP verification"
+                ],
+                "summary": "api for user otp verification",
+                "operationId": "UserOtpVerify",
+                "parameters": [
+                    {
+                        "description": "Input Fields",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.OTPVerify"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login successful",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Missing or invalid entry",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -105,17 +190,34 @@
                 }
             }
         },
+        "request.OTPVerify": {
+            "type": "object",
+            "required": [
+                "otp",
+                "user_id"
+            ],
+            "properties": {
+                "otp": {
+                    "type": "string",
+                    "maxLength": 8,
+                    "minLength": 4
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.SignupUserData": {
             "type": "object",
             "required": [
-                "user_name",
+                "age",
+                "confirm_password",
+                "email",
                 "first_name",
                 "last_name",
-                "age",
-                "email",
-                "phone",
                 "password",
-                "confirm_password"     
+                "phone",
+                "user_name"
             ],
             "properties": {
                 "age": {
